test/extern/bradc/extern_string_test-remote.good
returned string return string test
extern_string_test-remote.chpl:7: error: cannot access remote data in local block
